fixed displayed title on website

--- a/views/user.mustache
+++ b/views/user.mustache
@@ -20,7 +20,7 @@
     <main>
       <div class="c-docTitle s-docTitle">
         <hr>
-        <h1 class="c-docTitle__title"> Fantastic Robots </h1>
+        <h1 class="c-docTitle__title"> Robots with emotions </h1>
         <hr>
       </div>
 <!--
